Simplify generic type usage across the codebase
Replaced unnecessary use of wildcard generics with raw types where type safety is maintained. This improves code readability and reduces verbosity without affecting functionality. Also includes minor cleanup for consistency and correctness.